--- a/package.json
+++ b/package.json
@@ -18,9 +18,14 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@fortawesome/angular-fontawesome": "^0.12.1",
+		"@fortawesome/fontawesome-svg-core": "^6.4.0",
+		"@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "bulma": "^0.9.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.12.0"
+    "zone.js": "~0.12.0",
+    "jquery": "^3.6.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.7",
@@ -33,6 +38,10 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.9.4"
+    "typescript": "~4.9.4",
+    "@types/jquery": "^3.5.16",
+    "angular-datatables": "^15.0.1",
+		"datatables.net": "^1.13.6",
+		"datatables.net-dt": "^1.13.6"
   }
 }
