--- a/angular.json
+++ b/angular.json
@@ -30,11 +30,13 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.sass"
+              "src/styles.sass",
+              "node_modules/datatables.net-dt/css/jquery.dataTables.css",
+              "node_modules/tippy.js/dist/tippy.css"
             ],
             "scripts": [
-              "/node_modules/jquery/dist/jquery.js",
-              "/node_modules/datatables.net/js/jquery.dataTables.js"
+              "node_modules/jquery/dist/jquery.js",
+              "node_modules/datatables.net/js/jquery.dataTables.js"
             ]
           },
           "configurations": {
