--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "@types/jquery": "^3.5.16",
     "angular-datatables": "^15.0.1",
 		"datatables.net": "^1.13.6",
-		"datatables.net-dt": "^1.13.6"
+		"datatables.net-dt": "^1.13.6",
+    "tippy.js": "^6.3.7",
+    "ngx-tippy-wrapper": "^6.2.2"
   }
 }
